# Microbial_network_inference_and_analysis_MicW2Graph

./: README.md
Data/KG/: Genus_functional_nodes.graphml  Species_functional_nodes.graphml
Data/Wastewater_Activated_Sludge_assembly/: Wastewater_Activated_Sludge_assembly_species_phyloseqfile.rds
Data/Wastewater_Activated_Sludge_metagenomic/: Wastewater_Activated_Sludge_metagenomic_species_phyloseqfile.rds
Data/Wastewater_Activated_Sludge_metatranscriptomic/: Wastewater_Activated_Sludge_metatranscriptomic_species_phyloseqfile.rds
Data/Wastewater_Industrial_wastewater_assembly/: Wastewater_Industrial_wastewater_assembly_species_phyloseqfile.rds
Data/Wastewater_Industrial_wastewater_metagenomic/: Wastewater_Industrial_wastewater_metagenomic_species_phyloseqfile.rds
Data/Wastewater_Water_and_sludge_assembly/: Wastewater_Water_and_sludge_assembly_species_phyloseqfile.rds
Data/Wastewater_Water_and_sludge_metagenomic/: Wastewater_Water_and_sludge_metagenomic_species_phyloseqfile.rds
Data/Wastewater_assembly/: Wastewater_assembly_species_phyloseqfile.rds
Network_analysis/: Degre_distrib_functionalnodesKG.py  Find_overlapping_communities_bybiome_and_exptype.py  Find_overlapping_edges_bybiome_and_exptype.py  Find_overlapping_otus_bybiome_and_exptype.py  Net_analysis_networkx_allmetrics.py  Net_analysis_networkx_clustmetrics_bybiome_and_exptype.py  Network_analysis_cytoscape.R  Network_analysis_netcomi.R  pyproject.toml
Network_inference/: Build_microb_net_species_bybiome_and_exptype.R  Preprocessing_metag_data_species_bybiome_and_exptype.R
(+167 files in other folders)
