[tool.poetry]
name = "netowrkx"
version = "0.1.0"
description = "Network analysis with networkx"
authors = ["sayalaruano <sebasar1245@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
numpy = "^1.26.4"
networkx = "^3.2.1"
ipykernel = "^6.29.3"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
